# MultipleCameraRecordingCXX

./: .gitignore  CMakeLists.txt  README.md
include/: CameraUrls.h
src/: multicam_capture_gui.cpp
